<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/club1_name_text"
        android:id="@+id/club1TextView"
        android:textAlignment="textStart"
        android:layout_above="@+id/club1ScoreTextView"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/club1ScoreTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/club2_name_text"
        android:id="@+id/club2TextView"
        android:layout_gravity="right"
        android:textAlignment="textEnd"
        android:layout_below="@+id/dayTextView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/club2ScoreTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_divider"
        android:id="@+id/score_divider"
        android:textSize="50sp"
        android:layout_below="@+id/timeTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/club1_score_text"
        android:id="@+id/club1ScoreTextView"
        android:textSize="50sp"
        android:layout_marginEnd="22dp"
        android:layout_below="@+id/timeTextView"
        android:layout_toStartOf="@+id/score_divider"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/club2_score_text"
        android:id="@+id/club2ScoreTextView"
        android:textSize="50sp"
        android:layout_marginStart="22dp"
        android:layout_below="@+id/timeTextView"
        android:layout_toEndOf="@+id/score_divider"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start_time_text"
        android:id="@+id/timeTextView"
        android:textAlignment="center"
        android:layout_below="@+id/dayTextView"
        android:layout_alignEnd="@+id/club2ScoreTextView"
        android:layout_alignStart="@+id/club1ScoreTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/club1_spirit_score_text"
        android:id="@+id/club1SpiritScoreTextView"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:layout_below="@+id/club2TextView"
        android:layout_alignStart="@+id/club1TextView"
        android:layout_toStartOf="@+id/club1ScoreTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/club2_spirit_score_text"
        android:id="@+id/club2SpiritScoreTextView"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:layout_alignTop="@+id/club1SpiritScoreTextView"
        android:layout_alignStart="@+id/club2TextView"
        android:layout_alignEnd="@+id/club2TextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/schedule_day_text"
        android:id="@+id/dayTextView"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/club2ScoreTextView"
        android:layout_alignStart="@+id/club1ScoreTextView" />

</RelativeLayout>
