<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/event_name_text"
        android:id="@+id/eventNameTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start_date_text"
        android:id="@+id/eventStartDateTextView"
        android:layout_below="@+id/eventNameTextView"
        android:layout_alignStart="@+id/eventNameTextView"
        android:layout_marginTop="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_venue_text"
        android:id="@+id/eventVenueTextView"
        android:textSize="20sp"
        android:layout_below="@+id/eventNameTextView"
        android:layout_alignStart="@+id/eventNameTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_end_date_text"
        android:id="@+id/eventEndDateTextView"
        android:layout_alignTop="@+id/eventStartDateTextView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
