<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kennanseno.ultimate_scoreboard_app.Activity.CreateEventActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_event_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createEventNameEditText"
        android:text="Event Name"
        android:layout_below="@+id/textView"
        android:layout_marginTop="53dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createEventAddressEditText"
        android:layout_below="@+id/createEventNameEditText"
        android:layout_alignStart="@+id/createEventNameEditText"
        android:layout_marginTop="36dp"
        android:layout_alignEnd="@+id/createEventNameEditText"
        android:text="Address..." />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/create_text"
        android:id="@+id/createEventCreateButton"
        android:layout_marginBottom="67dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/createEventAddressEditText"
        android:background="#4e90f3" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        android:id="@+id/createEventCancelButton"
        android:background="#83868d"
        android:layout_alignTop="@+id/createEventCreateButton"
        android:layout_alignStart="@+id/createEventAddressEditText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="Start Date"
        android:id="@+id/createEventAddDateButton"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/createEventAddressEditText"
        android:layout_alignStart="@+id/createEventAddressEditText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="End Date"
        android:id="@+id/createEventAddEndDateButton"
        android:layout_alignTop="@+id/createEventAddDateButton"
        android:layout_alignEnd="@+id/createEventAddressEditText" />

</RelativeLayout>
