<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kennanseno.ultimate_scoreboard_app.Activity.UpdateScheduleActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="MATCH RESULT"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Team 1"
        android:id="@+id/textView4"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Team 2"
        android:id="@+id/textView5"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="40dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam1ScoreEditText"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:hint="@string/Score_text"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam2ScoreEditText"
        android:layout_below="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:hint="@string/Score_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Spirit Score"
        android:id="@+id/textView6"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/updateMatchTeam1ScoreEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Rules, Knowledge and Use"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam1SpiritScore1EditText"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/updateMatchTeam1ScoreEditText" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam2SpiritScore1EditText"
        android:layout_alignTop="@+id/updateMatchTeam1SpiritScore1EditText"
        android:layout_alignStart="@+id/updateMatchTeam2ScoreEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Fouls and Body contacts"
        android:id="@+id/textView8"
        android:layout_below="@+id/updateMatchTeam1SpiritScore1EditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam1SpiritScore2EditText"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/updateMatchTeam1SpiritScore1EditText" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam2SpiritScore2EditText"
        android:layout_alignTop="@+id/updateMatchTeam1SpiritScore2EditText"
        android:layout_alignEnd="@+id/updateMatchTeam2SpiritScore1EditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Fair-mindedness"
        android:id="@+id/textView9"
        android:layout_below="@+id/updateMatchTeam1SpiritScore2EditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam1SpiritScore3EditText"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/updateMatchTeam1SpiritScore2EditText" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam2SpiritScore3EditText"
        android:layout_below="@+id/textView9"
        android:layout_alignEnd="@+id/updateMatchTeam2SpiritScore2EditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Positive attitude"
        android:id="@+id/textView10"
        android:layout_below="@+id/updateMatchTeam2SpiritScore3EditText"
        android:layout_alignEnd="@+id/textView9"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam1SpiritScore4EditText"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/updateMatchTeam1SpiritScore3EditText" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam2SpiritScore4EditText"
        android:layout_alignTop="@+id/updateMatchTeam1SpiritScore4EditText"
        android:layout_alignStart="@+id/updateMatchTeam2SpiritScore3EditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Communication"
        android:id="@+id/textView11"
        android:layout_below="@+id/updateMatchTeam1SpiritScore4EditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam1SpiritScore5EditText"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/updateMatchTeam1SpiritScore4EditText" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/updateMatchTeam2SpiritScore5EditText"
        android:layout_below="@+id/textView11"
        android:layout_alignEnd="@+id/updateMatchTeam2SpiritScore4EditText" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        android:id="@+id/updateMatchCancelButton"
        android:background="#83868d"
        android:layout_below="@+id/updateMatchTeam1SpiritScore5EditText"
        android:layout_alignStart="@+id/textView4" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/update_text"
        android:id="@+id/updateMatchUpdateButton"
        android:background="#4e90f3"
        android:layout_below="@+id/updateMatchTeam2SpiritScore5EditText"
        android:layout_alignEnd="@+id/textView5" />

</RelativeLayout>
